# aramis-editor

./: .gitignore  CHANGELOG.md  CNAME  LICENSE  README.md  THIRD_PARTY_NOTICES  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.cursor/rules/: rebuild-after-changes.mdc
.github/workflows/: pages.yml
architecture/: ARCHITECTURE.md
docs/: index.html
pages/: CNAME  _config.yml  index.html
pages/_layouts/: default.html
releases/: README.md  v0.1.10.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md
scripts/: build-aramis-editor.bat  create-start-menu-shortcut.ps1  launch-aramis-editor.bat  release.bat  release.ps1
scripts/lib/: patchnotes.ps1  version.ps1
src/: App.tsx  index.css  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: catalog.rs  editor.rs  jpeg_encode.rs  lib.rs  library.rs  main.rs  metadata.rs  pipeline.rs  preview_worker.rs  settings.rs  xmp.rs
src-tauri/src/edits/: basic.rs  basic_types.rs  calibration.rs  color_grading.rs  crop.rs  detail.rs  effects.rs  hsl.rs  lens.rs  mod.rs  spot_heal.rs  stack.rs  tone_curve.rs  transform.rs  util.rs
src-tauri/src/export/: mod.rs
src-tauri/src/history/: mod.rs
src-tauri/src/presets/: mod.rs
src-tauri/src/raw/: embedded_jpeg.rs  jpeg_backend.rs  mod.rs  rawloader_backend.rs
src-tauri/src/snapshots/: mod.rs
src-tauri/src/upscale/: mod.rs
src/components/: ContextMenu.tsx  Spinner.tsx  ToastContainer.tsx  icons.tsx
src/lib/: revealFile.ts  slider.ts  theme.ts
(+44 files in other folders)
