[package]
name = "aramis-editor"
version = "0.1.4"
description = "Aramis Editor — desktop photo editor"
authors = ["Aramis Editor contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "aramis_editor_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
walkdir = "2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
rawloader = "0.37"
kamadak-exif = "0.6"
png = "0.17"
base64 = "0.22"
thiserror = "2"
anyhow = "1"
fast_image_resize = "5"
dirs = "6"
rayon = "1"

[profile.release]
codegen-units = 16
lto = false
opt-level = 2
panic = "abort"
strip = true
